2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineSelection.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineSelection.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* LibraryView.cpp:
	* X3DBrowserEditor.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineSelection.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoHistory.h:
	* UndoHistory.cpp:
	* X3DUserInterface.cpp:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* NodePropertiesEditor.cpp:
	* OutlineCellRenderer.cpp: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2013-11-18  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineSelection.h:
	* OutlineSelection.cpp: 

2013-11-18  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoStep.h:
	* UndoStep.cpp:
	* UndoFunction.h:
	* RedoFunction.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* Gray.x3dv:
	* X3DBrowserWindowInterface.h: