@@ -1,5 +1,9 @@
 2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBaseNode.cpp: 
+
+2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* SFVec4.h:
 	* MFNode.h:
 	* SFVec3.h:
